Version 8.0
===========

New Features and Enhancements
-----------------------------
* Added CRegKey.
  CRegKey is a wrapper for functions used to access and modify the registry.

* Added  GetCommandLineArgs
  This function provides access to the command line arguments. They are
  returned in a vector of CString.

* Removed obsolete code



Version 7.9
===========

Overview
--------
This version of Win32++ moves away from the use of pointers. Where before we 
would use pointers to objects in Win32++ function calls, we now use the objects
directly. The USE_OBSOLETE_CODE macro has been provided in this version to make
code migration easier. Even with this macro defined, you will need to use 
non-pointer arguments in Win32++ function calls.

New Features and Enhancements
-----------------------------
* The FromHandle method of creating temporary CWnds has been obsoleted. 
The FromHandle approach had the following disadvantages:
 - It required the newly created CWnds to be removed some indeterminate time
   after being created. This was done in OnIdle.
 - The running of OnIdle can be delayed indefinitely while windows runs
   any internal message loop, causing temporaries to accumulate. Internal
   message loops are run while menus are active, for example.   
 - It encouraged an inappropriate reliance on raw pointers to CWnd objects.
 - There was confusion about when the temporary CWnd was destroyed.
The FromHandle approach has been replaced. CWnd member functions which 
previously returned a CWnd pointer(CWnd*) now return CWnd. 
Coding examples: (The GetParent function now returns a CWnd)
 GetParent().SendMessage(SomeMessage, wParam, lParam);
 HWND hWnd = GetParent(); // retrieve the parent window's HWND
 
* The FromHandle for the other types has been obsoleted as well. This includes:
  - CBitmap::FromHandle
  - CBrush::FromHandle
  - CDC::FromHandle
  - CFont::FromHandle
  - CPalette:: FromHandle
  - CPen::FromHandle
  - CRgn::FromHandle
  